Implement DeviceBridgeProxy for method call from WebView